@@ -2,174 +2,132 @@ package com.example.budget.service;
 
 import com.example.budget.dto.CreateInstallmentPlanRequest;
 import com.example.budget.dto.InstallmentPlanDTO;
+import com.example.budget.exception.AccessDeniedException;
+import com.example.budget.exception.EntityNotFoundException;
+import com.example.budget.mapper.InstallmentPlanMapper;
 import com.example.budget.model.InstallmentPlan;
 import com.example.budget.model.Transaction;
-import com.example.budget.model.TransactionType;
 import com.example.budget.model.User;
 import com.example.budget.repository.InstallmentPlanRepository;
 import com.example.budget.repository.TransactionRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Service for installment plan operations.
+ * 
+ * Handles CRUD operations for installment plans. When a plan is created, it
+ * automatically generates corresponding transaction entries for each installment.
+ * All operations are scoped to the authenticated user.
+ */
 @Service
 public class InstallmentPlanService {
 
     private final InstallmentPlanRepository installmentPlanRepository;
     private final TransactionRepository transactionRepository;
+    private final InstallmentPlanMapper installmentPlanMapper;
 
     public InstallmentPlanService(InstallmentPlanRepository installmentPlanRepository,
-                                  TransactionRepository transactionRepository) {
+                                  TransactionRepository transactionRepository,
+                                  InstallmentPlanMapper installmentPlanMapper) {
         this.installmentPlanRepository = installmentPlanRepository;
         this.transactionRepository = transactionRepository;
+        this.installmentPlanMapper = installmentPlanMapper;
     }
 
     /**
-     * Cria um plano de parcelamento e gera automaticamente as transações mensais
+     * Creates a new installment plan and generates corresponding transactions.
+     * 
+     * Creates an installment plan with the specified number of installments and value.
+     * Automatically generates transaction entries for each installment, spaced monthly
+     * from the start date. Due to cascade configuration, deleting a plan will also
+     * delete all associated transactions.
+     * 
+     * @param request Request containing plan details
+     * @param user User who owns the installment plan
+     * @return InstallmentPlanDTO containing the created plan with all generated transactions
      */
     @Transactional
     public InstallmentPlanDTO createInstallmentPlan(CreateInstallmentPlanRequest request, User user) {
-        // Validações básicas
-        if (request.getTotalInstallments() <= 0) {
-            throw new IllegalArgumentException("O número de parcelas deve ser maior que zero");
-        }
-        if (request.getInstallmentValue() == null || request.getInstallmentValue().compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("O valor da parcela deve ser maior que zero");
-        }
-
-        // Criar o plano de parcelamento
-        InstallmentPlan plan = new InstallmentPlan();
-        plan.setTotalInstallments(request.getTotalInstallments());
-        plan.setInstallmentValue(request.getInstallmentValue());
-        plan.setTotalAmount(request.getInstallmentValue().multiply(new BigDecimal(request.getTotalInstallments())));
-        plan.setUser(user);
-
-        // Salvar o plano primeiro para obter o ID
+        InstallmentPlan plan = installmentPlanMapper.toEntity(request, user);
         plan = installmentPlanRepository.save(plan);
 
-        // Criar as transações para cada parcela
-        List<Transaction> transactions = new ArrayList<>();
-        
-        // Usar startDateTime se disponível, senão usar startDate com horário atual
-        LocalDateTime baseDateTime;
-        if (request.getStartDateTime() != null) {
-            baseDateTime = request.getStartDateTime();
-        } else {
-            LocalDate currentDate = request.getStartDate() != null ? request.getStartDate() : LocalDate.now();
-            baseDateTime = currentDate.atTime(12, 0); // Usar meio-dia como padrão
-        }
-
-        for (int i = 1; i <= request.getTotalInstallments(); i++) {
-            Transaction transaction = new Transaction();
-            transaction.setType(TransactionType.EXPENSE); // Parcelamentos são sempre despesas
-            transaction.setCategory(request.getCategory());
-            transaction.setDescription(String.format("%s (Installment %d/%d)", 
-                                       request.getDescription(), i, request.getTotalInstallments()));
-            transaction.setAmount(request.getInstallmentValue());
-            transaction.setDateTime(baseDateTime.plusMonths(i - 1)); // Incrementar meses mantendo horário
-            transaction.setUser(user);
-            transaction.setInstallmentPlan(plan);
-            transaction.setInstallmentNumber(i); // Define o número da parcela
-
-            transactions.add(transaction);
-        }
-
-        // Salvar todas as transações
+        List<Transaction> transactions = installmentPlanMapper.createTransactionsFromPlan(plan, request);
         transactionRepository.saveAll(transactions);
         plan.setTransactions(transactions);
 
-        // Retornar o DTO com as informações completas
-        return mapToDTO(plan);
+        return installmentPlanMapper.toDTO(plan);
     }
 
     /**
-     * Busca todos os planos de parcelamento de um usuário
+     * Retrieves all installment plans for a user.
+     * 
+     * Returns plans ordered by ID in descending order (newest first).
+     * 
+     * @param user User to find plans for
+     * @return List of InstallmentPlanDTO for the user
      */
     public List<InstallmentPlanDTO> findAllByUser(User user) {
         List<InstallmentPlan> plans = installmentPlanRepository.findByUserOrderByIdDesc(user);
         return plans.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(installmentPlanMapper::toDTO)
+                .toList();
     }
 
     /**
-     * Busca um plano específico por ID
+     * Retrieves a specific installment plan by ID.
+     * 
+     * Only the owner of the plan can access it.
+     * 
+     * @param id Installment plan ID
+     * @param user User attempting to access the plan
+     * @return InstallmentPlanDTO containing the plan details and all associated transactions
+     * @throws EntityNotFoundException if plan is not found
+     * @throws AccessDeniedException if user is not the owner
      */
     public InstallmentPlanDTO findById(Long id, User user) {
         InstallmentPlan plan = installmentPlanRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Plano de parcelamento não encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("InstallmentPlan", id));
 
-        // Verificar se o plano pertence ao usuário
-        if (!plan.getUser().getId().equals(user.getId())) {
-            throw new RuntimeException("Acesso negado");
-        }
+        validateUserOwnership(plan, user);
 
-        return mapToDTO(plan);
+        return installmentPlanMapper.toDTO(plan);
     }
 
     /**
-     * Deleta um plano de parcelamento e todas as suas transações associadas
+     * Deletes an installment plan and all associated transactions.
+     * 
+     * Only the owner of the plan can delete it. Due to cascade configuration,
+     * deleting a plan automatically deletes all associated transaction entries.
+     * 
+     * @param id Installment plan ID to delete
+     * @param user User attempting to delete the plan
+     * @throws EntityNotFoundException if plan is not found
+     * @throws AccessDeniedException if user is not the owner
      */
     @Transactional
     public void delete(Long id, User user) {
         InstallmentPlan plan = installmentPlanRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Plano de parcelamento não encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("InstallmentPlan", id));
 
-        // Verificar se o plano pertence ao usuário
-        if (!plan.getUser().getId().equals(user.getId())) {
-            throw new RuntimeException("Acesso negado");
-        }
+        validateUserOwnership(plan, user);
 
-        // Devido ao cascade = CascadeType.ALL e orphanRemoval = true, 
-        // as transações serão deletadas automaticamente
         installmentPlanRepository.delete(plan);
     }
 
     /**
-     * Converte InstallmentPlan para InstallmentPlanDTO
+     * Validates that a user owns an installment plan.
+     * 
+     * @param plan Installment plan to validate
+     * @param user User to check ownership for
+     * @throws AccessDeniedException if user is not the owner
      */
-    private InstallmentPlanDTO mapToDTO(InstallmentPlan plan) {
-        List<InstallmentPlanDTO.InstallmentTransactionDTO> transactionDTOs = plan.getTransactions().stream()
-                .map(tx -> new InstallmentPlanDTO.InstallmentTransactionDTO(
-                        tx.getId(),
-                        tx.getDescription(),
-                        tx.getAmount(),
-                        tx.getCategory(),
-                        tx.getDateTime().toLocalDate(),
-                        extractInstallmentNumber(tx.getDescription())
-                ))
-                .collect(Collectors.toList());
-
-        return new InstallmentPlanDTO(
-                plan.getId(),
-                plan.getTotalInstallments(),
-                plan.getTotalAmount(),
-                plan.getInstallmentValue(),
-                transactionDTOs
-        );
-    }
-
-    /**
-     * Extrai o número da parcela da descrição (ex: "Purchase (Installment 2/3)" -> 2)
-     */
-    private int extractInstallmentNumber(String description) {
-        try {
-            // Procura por padrão "Installment X/Y"
-            int start = description.indexOf("Installment ") + 12;
-            int end = description.indexOf("/", start);
-            if (start > 11 && end > start) {
-                return Integer.parseInt(description.substring(start, end));
-            }
-        } catch (Exception e) {
-            // Se não conseguir extrair, retorna 0
+    private void validateUserOwnership(InstallmentPlan plan, User user) {
+        if (!plan.getUser().getId().equals(user.getId())) {
+            throw new AccessDeniedException("Access denied: Installment plan does not belong to user");
         }
-        return 0;
     }
 }
 
